# bazel-example-python

./: BUILD.bazel  WORKSPACE.bazel
.ijwb/: .bazelproject
schemas/: BUILD.bazel  WORKSPACE.bazel  requirements.txt
schemas/tests/: test_schemas.py
tool_schemas/: BUILD.bazel
tool_schemas/schemas/: models.py
tool_schemas/tests/: test_schemas.py
tools/: BUILD.bazel  WORKSPACE.bazel
tools/tests/: test_tools.py
tools/tools/: tools.py
