package(default_visibility = ["//visibility:public"])
load("@my_deps//:requirements.bzl", "requirement")

py_library(
    name = "schemas",
    srcs = ["schemas/schemas.py"],
    deps = [
        requirement("pydantic")
    ],
    visibility = ["//visibility:public"]
)

py_test(
    name = "test_schemas",
    srcs = ["tests/test_schemas.py"],
    deps = [
        ":schemas",
        requirement("pytest")
    ],
    main = "tests/test_schemas.py"
)
