package(default_visibility = ["//visibility:public"])
load("@pip_deps//:requirements.bzl", "requirement")

py_library(
    name = "tool_schemas",
    srcs = glob(["schemas/*.py"]),
    deps = [
        requirement("pydantic")
    ],
    imports = ['.'],
    visibility = ["//visibility:public"]
)

py_test(
    name = "test_tool_schemas",
    srcs = ["tests/test_schemas.py"],
    deps = [
        ":tool_schemas",
        requirement("pytest")
    ],
    main = "tests/test_schemas.py"
)

