package(default_visibility = ["//visibility:public"])
load("@pip_deps//:requirements.bzl", "requirement")

py_library(
    name = "tools",
    srcs = ["tools/tools.py"],
    deps = [
        "//tool_schemas:tool_schemas"
    ],
    imports = ['.'],
    visibility = ["//visibility:public"]
)

py_test(
    name = "test_tools",
    srcs = ["tests/test_tools.py"],
    deps = [
        requirement("pytest"),
        ":tools"
    ],
    main = "tests/test_tools.py"
)
